--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     const { Player } = TextAliveApp;
   </script>
   <script src="/scripts/Lyrics.js"></script>
+  <script type = "module" src="./scripts/background.js"></script>
 </head>
 <body>
   <main>
@@ -41,6 +42,7 @@
         </defs>
       </svg>
     </section>
+    <canvas id = "background" class="full-screen" color></canvas>
   </main>
   <footer>
     <p>
