Added Three CDN

--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
   />
   <link rel="stylesheet" href="/styles/index.css" />
   <link rel="stylesheet" href="/styles/lyrics.css" />
+  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@<version>/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
+      }
+    }
+  </script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/textalive-app-api/dist/index.js"></script>
+  <script type = "module" src="./scripts/background.js"></script>
   <script>
     const { Player } = TextAliveApp;
   </script>
   <script src="/scripts/Lyrics.js"></script>
-  <script type = "module" src="./scripts/background.js"></script>
 </head>
 <body>
   <main>
@@ -41,8 +51,8 @@
           </filter>
         </defs>
       </svg>
+      <canvas id="c"></canvas>
     </section>
-    <canvas id = "background" class="full-screen" color></canvas>
   </main>
   <footer>
     <p>
