--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "https://unpkg.com/three@<version>/build/three.module.js",
+        "three": "https://unpkg.com/three@v0.152.2/build/three.module.js",
         "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
       }
     }
