added background color

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </filter>
         </defs>
       </svg>
-      <canvas id="c"></canvas>
+      <canvas id="c" color="turquoise"></canvas>
     </section>
   </main>
   <footer>
