first steps to morphing text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="full-screen">
       <section id="container">
         <span id="text1"></span>
-        <span id="text2"></span>
+        <span id="text2" class="hidden"></span>
       </section>
       <section id="media"></section>
       <svg id="filters">
