--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   />
   <link rel="stylesheet" href="/styles/index.css" />
   <link rel="stylesheet" href="/styles/lyrics.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
   <script type="importmap">
     {
       "imports": {
