3d pointer click event fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>Loading...</p>
       <button class="hidden play-btn">Play</button>
     </section>
-    <section class="full-screen">
+    <section id="text-animation-main" class="full-screen">
       <section id="container">
         <span id="text1"></span>
         <span id="text2" class="hidden"></span>
