--- a/test/text.html
+++ b/test/text.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="test.css" />
   </head>
   <body>
-    <p>はじまりのぴかーん（わー！）</p>
+    <h1 class="gradient-multiline">
+      <span>
+        Yes, this is
+      </span>
+      <span>
+        possible to do with CSS!
+      </span>
+    </h1>
   </body>
   
