--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <section class="full-screen">
       <div id="text-animation-main">
-        <h1 id="current-container">
+        <h1 id="current-container" class="lyric">
           <span id="text1"></span>
           <span id="text2" class="hidden"></span>
         </h1>  
