beginning aesthetic framing

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <button class="hidden play-btn">Play</button>
     </section>
     <section class="full-screen">
+      <div class="vertical-bar"></div>
       <div id="text-animation-main">
         <h1 id="current-container" class="lyric">
           <span id="text1"></span>
