--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
   <script>
     const { Player } = TextAliveApp;
   </script>
-  <script src="/scripts/Lyrics.js"></script>
 </head>
 <body>
+  <div id="media"></div>
+
   <main>
     <section id="loading" class="full-screen">
       <p>Loading...</p>
       <button class="hidden play-btn">Play</button>
     </section>
     <section class="full-screen">
+      <div id="beat-reactor"></div>
       <div class="vertical-bar"></div>
       <div id="text-animation-main">
         <h1 id="current-container" class="lyric">
@@ -45,18 +47,7 @@
           <span id="text2" class="hidden"></span>
         </h1>  
       </div>
-      <!-- <svg id="filters">
-        <defs>
-          <filter id="threshold">
-            <feColorMatrix in="SourceGraphic" type="matrix" values="1 0 0 0 0
-                  0 1 0 0 0
-                  0 0 1 0 0
-                  0 0 0 255 -140" />
-          </filter>
-        </defs>
-      </svg> -->
       <canvas id="c" color="turquoise"></canvas>
-      <div id="media"></div>
     </section>
   </main>
   <footer>
@@ -71,3 +62,6 @@
     </div>
   </footer>
 </body>
+<!-- Must be after html so it can access the media div -->
+<script src="/scripts/Lyrics.js"></script>
+
