git ignore test folder

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="vertical-bar"></div>
       <div id="text-animation-main">
         <h1 id="current-container" class="lyric">
-          <span id="text1"></span>
+          <span id="text1">Mutation feat. Hatsune Miku</span>
           <span id="text2" class="hidden"></span>
         </h1>  
       </div>
