frontend reorganization and some bug fix

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <div id="media"></div>
 
   <main>
-    <section id="loading" class="full-screen">
+    <section id="loading" class="top-level full-screen">
       <p>Loading...</p>
       <button class="hidden play-btn">Play</button>
     </section>
-    <section class="full-screen">
+    <section class="full-screen grid" >
       <div id="beat-reactor"></div>
       <div class="vertical-bar"></div>
       <div id="text-animation-main">
@@ -42,7 +42,8 @@
           <span id="text2" class="hidden"></span>
         </h1>  
       </div>
-      <canvas id="c" color="turquoise"></canvas>
+      <!-- <canvas id="c" color="turquoise"></canvas> -->
+      <div class="vertical-bar bottom-level col3"></div>
     </section>
   </main>
   <footer>
