Started work on rotation, refactored background.js a bit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     }
   </script>
-  <script type = "module" src="./scripts/background.js"></script>
+  <script type = "module" src="./scripts/index.js"></script>
 </head>
 <body>
   <div id="media"></div>
@@ -42,7 +42,7 @@
           <span id="text2" class="hidden"></span>
         </h1>  
       </div>
-      <!-- <canvas id="c" color="turquoise"></canvas> -->
+      <canvas id="c"></canvas>
       <div class="vertical-bar bottom-level col3"></div>
     </section>
   </main>
