--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/images/favicon.ico" />
+  <link rel="icon" href="/images/miku.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>Mutation</title>
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
   <script type="importmap">
     {
@@ -33,7 +34,7 @@
       <p>Loading...</p>
       <button class="hidden play-btn">Play</button>
     </section>
-    <section class="full-screen grid" >
+    <section class="full-screen grid non-chorus" >
       <div id="beat-reactor"></div>
       <div class="vertical-bar"></div>
       <div id="text-animation-main">
@@ -42,19 +43,43 @@
           <span id="text2" class="hidden"></span>
         </h1>  
       </div>
+      <div id="miku-container">
+        <div id="speech-bubble">
+          <p>Test</p>
+        </div>
+        <img src="/images/miku.png">
+      </div>
       <!-- <canvas id="c" color="turquoise"></canvas> -->
-      <div class="vertical-bar bottom-level col3"></div>
+      <div class="vertical-bar bottom-level col3">
+        <p>
+          <span id="position"><strong>-</strong> [ms]</span>
+        </p>    
+      </div>
     </section>
   </main>
   <footer>
-    <p>
-      <span id="position"><strong>-</strong> [ms]</span>
-    </p>
     <div id="control">
-      <button class="play-btn" >Play</button>
-      <button id="jump-btn" >jump</button>
-      <button id="pause-btn" >pause</button>
-      <button id="reset-btn" >rewind</button>
+      <button class="play-btn" >
+        <span class="material-symbols-outlined">
+          play_circle
+        </span>
+      </button>
+      <button id="jump-btn" >
+        Lyrics start
+      </button>
+      <button id="chorus-btn" >
+        Chorus
+      </button>
+      <button id="pause-btn" >
+        <span class="material-symbols-outlined">
+          pause_circle
+        </span>
+      </button>
+      <button id="reset-btn" >
+        <span class="material-symbols-outlined">
+          stop_circle
+        </span>
+      </button>
     </div>
   </footer>
 </body>
