miku speech bubble update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </h1>  
       </div>
       <div id="miku-container">
-        <div id="speech-bubble">
+        <div id="speech-bubble" class="hidden">
           <p>Test</p>
         </div>
         <img src="/images/miku.png">
