--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
           stop_circle
         </span>
       </button>
+      <label for="volume-level">
+        <span class="material-symbols-outlined">
+          volume_up
+        </span>
+      </label>
+      <input id="volume-level" type="range" min="0" max="100" value="50">
     </div>
   </footer>
 </body>
