--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
     }
   </script>
   <script type = "module" src="./scripts/index.js"></script>
+  <script type="x-shader/x-vertex" id="vertexshader">
+
+    varying vec2 vUv;
+
+    void main() {
+
+      vUv = uv;
+
+      gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+    }
+  </script>
+  <script type="x-shader/x-fragment" id="fragmentshader">
+    uniform sampler2D baseTexture;
+    uniform sampler2D bloomTexture;
+
+    varying vec2 vUv;
+
+    void main() {
+      gl_FragColor = ( texture2D( baseTexture, vUv ) + vec4( 1.0 ) * texture2D( bloomTexture, vUv ) );
+    }
+  </script>
 </head>
 <body>
   <main>
@@ -84,6 +106,19 @@
         </p>    
       </div>
     </section> 
+    <article id="miku-profile" class="window">
+      <div class="window-header">
+        <p>Miku</p>
+        <button disabled>
+          <span class="material-symbols-outlined">
+            close
+          </span>  
+        </button>
+      </div>
+      <div class="window-body">
+        <img src="./images/profile_1.png">
+      </div>
+    </article>
   </main>
   <nav id="control" class="window">
     <div class="window-header">
@@ -134,7 +169,7 @@
       <span class="material-symbols-outlined">
         tune
       </span>
-      Controls
+      <span>Controls</span>
     </button>
     <div id="media"></div>
   </footer>
