--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       }
     }
   </script>
-  <script type = "module" src="./scripts/index.js"></script>
   <script type="x-shader/x-vertex" id="vertexshader">
 
     varying vec2 vUv;
@@ -48,6 +47,7 @@
       gl_FragColor = ( texture2D( baseTexture, vUv ) + vec4( 1.0 ) * texture2D( bloomTexture, vUv ) );
     }
   </script>
+  <script type = "module" src="./scripts/index.js"></script>
 </head>
 <body>
   <main>
@@ -93,14 +93,13 @@
           <span>Test</span>
         </h1> -->
       </div>
-      <div id="miku-container">
+      <!-- <div id="miku-container">
         <div id="speech-bubble" class="hidden">
-          <!-- speech bubble content goes here -->
         </div>
         <img src="/images/miku.png">
-      </div>
+      </div> -->
       <!-- <canvas id="c" color="turquoise"></canvas> -->
-      <div class="vertical-bar bottom-level col3">
+      <div class="vertical-bar col3">
         <p>
           <span id="position"><strong>-</strong> [ms]</span>
         </p>    
@@ -117,6 +116,7 @@
       </div>
       <div class="window-body">
         <img src="./images/profile_1.png">
+        <div id="speech-bubble" class="hidden"></div>
       </div>
     </article>
   </main>
