randomize into sphere bounds

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <img src="/images/miku.png">
       </div> -->
       <!-- <canvas id="c" color="turquoise"></canvas> -->
-      <div class="vertical-bar col3">
+      <div class="vertical-bar bottom-level col3">
         <p>
           <span id="position"><strong>-</strong> [ms]</span>
         </p>    
