Started work on new mockup, seperate scenes in progress

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     }
   </script>
-  <script type = "module" src="./scripts/index.js"></script>
+  <script type = "module" src="./scripts/temp.js"></script>
 </head>
 <body>
   <main>
