--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         </p>  
       </div>
     </section>
+    <div id="bg-texture" class="full-screen bottom-level"></div>
     <section class="full-screen grid non-chorus" >
       <div class="vertical-bar"></div>
       <!-- <div id="miku-container">
