index clean up and added composer to ElemScene.js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 </head>
 <body>
   <main>
+    <!--nothing changes when canvas is omitted???-->
+    <canvas id="c" class="full-screen"></canvas>
     <section id="loading-overlay" class="top-level full-screen">
       <article id="loading-pop-up" class="window">
         <div class="window-header">
