--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         </p>  
       </div>
     </section>
-    <div id="bg-texture" class="full-screen bottom-level"></div>
+    <div id="bg-texture" class="full-screen bottom-level">
+    </div>
     <section class="full-screen grid non-chorus" >
       <div class="vertical-bar"></div>
       <!-- <div id="miku-container">
