--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
     }
   </script>
-  <script type = "module" src="./scripts/index.js"></script>
+  <script type = "module" src="./scripts/App.js"></script>
 </head>
 <body>
   <main>
