--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div id="scene-1" class="graphic-box"></div>
       <div id="scene-2" class="graphic-box"></div>
       <div id="miku-scene" class="graphic-box">
-        <div id="speech-bubble" class="hidden"></div>
+        <div id="speech-bubble" class="lyric-outro-animation"></div>
       </div>
       <nav>
         <button id="play-btn" class="play-btn hidden" >
@@ -110,12 +110,16 @@
           <span id="position"><strong>-</strong> [ms]</span>
         </p>  
       </div>
-      <h1 id="top-text" class="y2k-text-style current-container">
-        <span class="hidden-visibility">placeholder</span>
-      </h1>
-      <h1 id="bottom-text" class="y2k-text-style">
-        <span class="hidden-visibility">placeholder</span>
-      </h1>
+      <div id="top-text" class="y2k-text-style current-container">
+        <h1>
+          <span class="hidden-visibility">placeholder</span>
+        </h1>
+      </div>
+      <div id="bottom-text" class="y2k-text-style">
+        <h1>
+          <span class="hidden-visibility">placeholder</span>
+        </h1>
+      </div>
     </section>
     <div id="bg-texture" class="full-screen bottom-level">
     </div>
