--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         </button>
       </nav>
       <div id="graphic-bottom-right">
+        <div class="graphic-box"></div>
         <p>
           <span id="position"><strong>-</strong> [ms]</span>
         </p>  
@@ -126,31 +127,11 @@
         </h1>
       </div>
     </section>
-    <div id="bg-texture" class="full-screen bottom-level">
+    <div id="bg-texture" class="full-screen grid bottom-level">
+      <div class="vertical-bar bottom-level"></div>
+      <div class="vertical-bar bottom-level last-col"> 
     </div>
-    <section class="full-screen grid non-chorus" >
-      <div class="vertical-bar"></div>
-      <!-- <div id="miku-container">
-        <div id="speech-bubble" class="hidden">
-        </div>
-        <img src="/images/miku.png">
-      </div> -->
-      <div class="vertical-bar bottom-level col3">  
-      </div>
-    </section> 
-    <!-- <article id="miku-profile" class="window">
-      <div class="window-header">
-        <p>Miku</p>
-        <button disabled>
-          <span class="material-symbols-outlined">
-            close
-          </span>  
-        </button>
-      </div>
-      <div class="window-body">
-        <img src="./images/profile_1.png">
-      </div>
-    </article> -->
+    <div id="media"></div>
   </main>
 </body>
 <!-- Must be after html so it can access the media div -->
