starting on miku animation

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
       <div id="miku-scene" class="graphic-box">
         <div id="speech-bubble" class="lyric-outro-animation"></div>
       </div>
+      <div id="metadata-box" class="graphic-box">
+        <div>
+          <img src="../images/miku.png">
+        </div>
+        <div>
+          <p>ミュウテイション</p>
+          <p>Rin（Kuroneko Lounge）</p>
+        </div>
+      </div>
       <nav>
         <button id="play-btn" class="play-btn hidden" >
           <span class="material-symbols-outlined">
