new miku sprite and bg

--- a/index.html
+++ b/index.html
@@ -136,11 +136,14 @@
         </h1>
       </div>
     </section>
-    <div id="bg-texture" class="full-screen grid bottom-level">
+    <div class="static full-screen bottom-level bg-texture">
+    </div>
+    <div class="rainbow full-screen bottom-level bg-texture"></div>
+    <div class="full-screen grid bottom-level">
+      <div id="media"></div>
       <div class="vertical-bar bottom-level"></div>
       <div class="vertical-bar bottom-level last-col"> 
     </div>
-    <div id="media"></div>
   </main>
 </body>
 <!-- Must be after html so it can access the media div -->
