minor edits to side panel timings

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         <div>
           <p>ミュウテイション</p>
           <p>Rin（Kuroneko Lounge）</p>
+          <p>
+            <span id="position"><strong>-</strong> [ms]</span>
+          </p>
         </div>
       </div>
       <nav>
@@ -119,12 +122,12 @@
           <span style="font-size: 1em;">2nd Chorus</span>
         </button>
       </nav>
-      <div id="graphic-bottom-right">
+      <!-- <div id="graphic-bottom-right">
         <div class="graphic-box"></div>
         <p>
           <span id="position"><strong>-</strong> [ms]</span>
         </p>  
-      </div>
+      </div> -->
       <div id="top-text" class="y2k-text-style current-container">
         <h1>
           <span class="hidden-visibility">placeholder</span>
