--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
             volume_up
           </span>
         </button>
-        <div id="slider-wrapper">
-          <input id="volume-level" type="range" min="0" max="100" value="50">
-        </div>
         <button id="vol-down-btn">
           <span class="material-symbols-outlined">
             volume_down_alt
+          </span>
+        </button>
+        <button id="vol-mute-btn">
+          <span class="material-symbols-outlined">
+            no_sound
           </span>
         </button>
         <!-- Below are temporary -->
