--- a/index.html
+++ b/index.html
@@ -82,15 +82,17 @@
           </span>
         </button>
         <!-- Below are temporary -->
-        <button id="jump-btn">
-          <span style="font-size: 1em;">Lyrics start</span>
-        </button>
-        <button id="chorus-btn" >
-          <span style="font-size: 1em;">Chorus</span>
-        </button>
-        <button id="2nd-chorus-btn" >
-          <span style="font-size: 1em;">2nd Chorus</span>
-        </button>
+        <div id="debug-tools">
+          <button id="jump-btn">
+            <span style="font-size: 1em;">Lyrics start</span>
+          </button>
+          <button id="chorus-btn" >
+            <span style="font-size: 1em;">Chorus</span>
+          </button>
+          <button id="2nd-chorus-btn" >
+            <span style="font-size: 1em;">2nd Chorus</span>
+          </button>  
+        </div>
       </nav>
       <nav id="right-nav">
         <button id="vol-up-btn">
